apps/keycloak/postgres/networkpolicies/postgres.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: postgres
  namespace: keycloak
spec:
  endpointSelector:
    matchLabels:
      app: keycloak
      component: postgres
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: keycloak
            component: keycloak
            io.kubernetes.pod.namespace: keycloak
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
